# Experiment

./: CMakeLists.txt  README.md
Attic/: CDT.cpp  CDT.h  exact_geometry.cpp  exact_geometry.h  mesh_surface_intersection.cpp  mesh_surface_intersection.h
CGAL/: delaunay_nd_cgal.cpp  delaunay_nd_cgal.h
DATA/PR1/: PR1.lua  script.lua  sphere_ico_zone_bug.geogram
DATA/PR12/: PR12.lua
DATA/PR16/: constraints_100_1.geogram  constraints_100_10.geogram  constraints_100_11.geogram  constraints_100_2.geogram  constraints_100_3.geogram  constraints_100_4.geogram  constraints_100_5.geogram  constraints_100_6.geogram  constraints_100_7.geogram  constraints_100_8.geogram  constraints_100_9.geogram
DATA/PR17/: constraints_200_1.geogram  constraints_200_2.geogram
DATA/PR18/: tri_100K.geogram
DATA/PR19/: tmp_wing.geogram
DATA/PR2/: PR2.lua  script.lua
DATA/PR20/: classif_error_1.geogram  classif_error_2.geogram
DATA/PR23/: Spiral_sphere_faulty_triangles.geogram
DATA/PR4/: PR4.lua  script.lua
DATA/PR5/: PR5.lua
DATA/PR7/: PR7.lua
algo/: CDT.cpp  CDT.h  CDT_with_interval.cpp  CDT_with_interval.h  disjoint_sets.h  exact_geometry.cpp  exact_geometry.h  interval_geometry.cpp  interval_geometry.h  interval_nt.cpp  interval_nt.h  mesh_surface_intersection.cpp  mesh_surface_intersection.cpp.parallel  mesh_surface_intersection.h  tiny_cas.cpp  tiny_cas.h
algo/Attic/: delaunay_qhull.cpp  delaunay_qhull.h  interval_nt.h
commands/: exact_geometry.h  geometry.h  mesh_grob_calabi_yau_commands.cpp  mesh_grob_calabi_yau_commands.h  mesh_grob_experiment_commands.cpp  mesh_grob_experiment_commands.cpp.project  mesh_grob_experiment_commands.cpp~  mesh_grob_experiment_commands.h  mesh_grob_experiment_commands.h~  mesh_grob_geobodies_commands.cpp  mesh_grob_geobodies_commands.h
common/: Experiment_common.cpp  common.h
tools/: mesh_grob_neighbor_tools.cpp  mesh_grob_neighbor_tools.h
